# triton-benchmark

./: .gitignore  .gitmodules  README.md  build.sh  copy_remote_back.sh  copy_to_remote.sh  plot_benchmark.py  report.sh  run.sh
benchmarks/: .gitignore  README.md  autotuning-x86.sh  autotuning.sh  build-x86.sh  build.sh  copy_remote_back.sh  copy_to_remote.sh  get_data.py  plot_benchmark.py  report.sh  run.sh
benchmarks/patch/: triton-cpu-0001-RISCV.patch  triton-cpu-0001-driver.patch  triton-cpu-0002-Autotuning.patch  triton-cpu-0002-autotuning.patch  triton-cpu-0003-autotuner.patch
cases/: .gitignore  README.md  plot_figure.py  requirements.txt
cases/conv2d/: BenchmarkConv2d.py  benchmark.py  config.py  conv2d_ansor.py  conv2d_hidet.py  conv2d_triton.py  conv2d_tvm.py
cases/layernorm/: benchmark.py  benchmarks.py  layernorm_ansor_topi.py  layernorm_hidet.py  layernorm_triton.py  layernorm_tvm.py
cases/matmul/: benchmark.py  matmul_ansor.py  matmul_ansor_topi.py  matmul_autotvm.py  matmul_hidet.py  matmul_torch.py  matmul_triton.py  matmul_tvm.py  test_matmul_hidet.py
cases/softmax/: benchmark.py  softmax_ansor.py  softmax_ansor_topi.py  softmax_autotvm.py  softmax_hidet.py  softmax_triton.py  softmax_tvm.py
cases/transpose/: BenchmarkTranspose.py  benchmark.py  config.py  transpose_hidet.py  transpose_triton.py  transpose_tvm.py
cases/vecadd/: benchmark.py  (+4 more)
docs/: ventus-backprop-guide.md
examples/: README.md
examples/ventus-backprop/translate/: CMakeLists.txt  translate.cc
patch/: llvm-project-0001-Add-CallingConvention-of-Ventus-kernel.patch
(+181 files in other folders)
